[package]
name = "crepes"
version = "0.0.2"
authors = ["Nikola Hristov <president@nikolahristov.tech>"]
edition = "2021"
description = "A compiler for reactive views in HTML with JavaScript"
documentation = "https://docs.rs/crepes"
readme = "README.md"
repository = "https://github.com/CrepesJS/crepes"
license-file = "LICENSE"
keywords = ["crepes", "web", "framework", "ssr"]
categories = ["web-programming"]

[dependencies]
